--- a/index.html
+++ b/index.html
@@ -1,11 +1,321 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>The Best Travel Agency</title>
+    <!-- icon -->
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+            integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+    />
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link
+            href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,1000;1,200;1,600&display=swap"
+            rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+<header class="header container">
+    <nav class="nav">
+        <div class="nav-title">
+            <img src="Images/Group 40071 (2).png" alt=""/>
+            <h2 class="be-travel">Be <span class="travel">Travel</span></h2>
+        </div>
+        <ul>
+            <li>
+                <a href=""><span class="home">Home</span></a>
+            </li>
+            <li><a href="">Packages</a></li>
+            <li><a href="">Testimonial</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+        <button class="toggle">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+    </nav>
+</header>
+<!-- main section start -->
+<main class="container">
+    <!-- banner section start -->
+    <section class="banner-container">
+        <div class="banner-bacgraound">
+            <div class="banner-text">
+                <div>
+                    <div>
+                        <h1 class="banner-title">Explore Your Travel</h1>
+                        <p class="para">
+                            Traveling is an amazing way to learn a lot of things in life. A
+                            lot of people around the world travel every year to many places.
+                            Moreover, it is important to travel to humans.
+                        </p>
+                    </div>
+                    <div class="input-form">
+                        <input class="input-type" type="text" placeholder="Where go"/>
+                        <select class="input-type" name="" id="">
+                            <option value="">When</option>
+                        </select>
+                        <select class="input-type" name="" id="">
+                            <option value="">Select Type</option>
+                        </select>
+                        <button class="find-now">
+                            <span><i class="fa-solid fa-magnifying-glass"></i></span>Find
+                            Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- our popular tour section -->
+    <section class="tour-section">
+        <div class="tour-content">
+            <h2 class="tour-title">Our Popular Tours</h2>
+            <p class="tour-description">
+                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec
+                nibh pellentesque.
+            </p>
+            <ul>
+                <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at
+                    .
+                </li>
+                <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at
+                    .
+                </li>
+            </ul>
+            <p class="tour-description">Amet consectetur. Vulputate commodo felis molestie risus
+                ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
+                natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+            <button class="btn-primary">Read More</button>
+        </div>
+        <div class="tour-img">
+            <img src="Images/Rectangle 4.png" alt="">
+        </div>
+    </section>
+    <!-- destination section start -->
+    <section class="destination-section">
+        <div class="destination-container">
+            <h2 class="destination-title">Choose Your Destination</h2>
+            <p class="destination-description">
+                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst
+                nec nibh pellentesque.
+            </p>
+        </div>
+        <div>
+            <div class="all-destination">
+                <div class="destination item1">
+                    <img src="Images/Rectangle 5.png" alt="">
+                    <h3 class="img-text">Maldives</h3>
+                </div>
+                <div class="destination item2">
+                    <img src="Images/Rectangle 8.png" alt="">
+                    <h3 class="img-text">Indonesia</h3>
+                </div>
+                <div class="destination item3">
+                    <img src="Images/Rectangle 6.png" alt="">
+                    <h3 class="img-text">Srilanka</h3>
+                </div>
+                <div class="destination item4">
+                    <img src="Images/Rectangle 7.png" alt="">
+                    <h3 class="img-text">North America</h3>
+                </div>
+
+                <div class="destination item5">
+                    <img src="Images/Rectangle 9.png" alt="">
+                    <h3 class="img-text">Kashmir</h3>
+                </div>
+                <div class="destination item6">
+                    <img src="Images/Rectangle 11.png" alt="">
+                    <h3 class="img-text">bangladesh</h3>
+                </div>
+                <div class="destination item7">
+                    <img src="Images/Rectangle 10.png" alt="">
+                    <h3 class="img-text">Bandarban</h3>
+                </div>
+            </div>
+    </section>
+    <!-- choose section start -->
+    <section class="choose-section">
+        <div class="destination-container">
+            <h2 class="destination-title">Why Choose Us</h2>
+            <p class="destination-description">
+                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst
+                nec nibh pellentesque.
+            </p>
+        </div>
+    </section>
+    <!-- chose card section -->
+    <section class="choose-card">
+        <div class="all-card">
+            <div class="one-card">
+                <img src="icon/hotel 1.svg" alt="">
+                <h2>Handpicked Hotels</h2>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                    sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+            <div class="two-card">
+                <img src="icon/map 1.svg" alt="">
+                <h2>Handpicked Hotels</h2>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                    sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+        </div>
+        </div>
+        <div class="third-card-last">
+            <div class="third-card">
+                <img src="icon/price-tag 1.png" alt="">
+                <h2>Handpicked Hotels</h2>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                    sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+        </div>
+    </section>
+    <!-- deals and discount section start -->
+    <section class="choose-section">
+        <div class="destination-container">
+            <h2 class="destination-title">Deals & Discounts</h2>
+            <p class="destination-description">
+                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst
+                nec nibh pellentesque.
+            </p>
+        </div>
+    </section>
+    <!-- discount place -->
+    <section class="deals-discount-section discouncard1">
+        <div class="deals-container">
+            <div class="full-text">
+                <h2 class="deals-title">Tour To Satorini</h2>
+                <p class="deals-description">Amet consectetur. Vulputate commodo felis
+                    molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                    adipiscing.</p>
+                <h5 class="price">Price: $1300-$1500</h5>
+                <button class="btn-primary">Book Now</button>
+            </div>
+        </div>
+    </section>
+    <!--  -->
+    <section class="deals-discount-section discouncard2">
+        <div class="deals-container">
+            <div class="full-text">
+                <h2 class="deals-title">Tour To Satorini</h2>
+                <p class="deals-description">Amet consectetur. Vulputate commodo felis
+                    molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                    adipiscing.</p>
+                <h5 class="price">Price: $1300-$1500</h5>
+                <button class="btn-primary">Book Now</button>
+            </div>
+        </div>
+    </section>
+    <!--  -->
+    <section class="deals-discount-section discouncard1">
+        <div class="deals-container">
+            <div class="full-text">
+                <h2 class="deals-title">Tour To Satorini</h2>
+                <p class="deals-description">Amet consectetur. Vulputate commodo felis
+                    molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                    adipiscing.</p>
+                <h5 class="price">Price: $1300-$1500</h5>
+                <button class="btn-primary">Book Now</button>
+            </div>
+        </div>
+        </div>
+    </section>
+    <div class="prebook-area">
+        <button class="btn-btn-primary">See All Packages</button>
+    </div>
+
+    <section class="simple-section">
+        <div class="simple-content">
+            <h3>A Simple Perfect Place To Get Lost</h3>
+            <p>
+                Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis
+                dignissim adipiscing quis.
+            </p>
+            <ul>
+                <li>
+                    Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse
+                    nullam.
+                </li>
+                <li>
+                    Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse
+                    nullam.
+                </li>
+            </ul>
+            <button class="btn-primary">See More</button>
+        </div>
+        <div class="">
+            <img src="/Images/video.png" alt=""/>
+        </div>
+    </section>
+
+    <section class="newsletter-section">
+        <form class="form">
+            <h2 class="title">Newsletter</h2>
+            <p>Get your daily dose of travel news & tips. Sign up today!</p>
+
+            <hr/>
+            <div class="input-form">
+                <input placeholder="Enter your name" type="text"/>
+                <input placeholder="Enter your email" type="email">
+                <button class="btn-primary">Subscribe</button>
+            </div>
+        </form>
+        <div class="content-image">
+            <img src="/Images/Rectangle%208%20(1).png" alt=""/>
+            <div class="discount">
+                <h6>Travel.com</h6>
+                <h3>Save up to 70%</h3>
+            </div>
+        </div>
+    </section>
+</main>
+
+<footer>
+    <div class="brand-area">
+        <div class="brand-logo">
+            <img src="Images/Group 40071 (2).png" alt=""/>
+            <h2 class="be-travel">Be <span class="travel">Travel</span></h2>
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo
+            erat
+            maecenas vitae elementum ultricies nullam. </p>
+        <ul class="brand-list">
+            <li>
+                <a href="http://www.twitter.com" target="_blank">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.facebook.com" target="_blank">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.instagram.com" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.github.com" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </li>
+
+        </ul>
+
+
+    </div>
+    <hr/>
+
+    <p class="copyright-text">2017, All Rights Reserved.</p>
+
+</footer>
 </body>
 </html>
