fix the img link

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             </div>
         </form>
         <div class="content-image">
-            <img src="/Images/Rectangle%208%20(1).png" alt=""/>
+            <img src="/Images/Rectangle 8 (1).png" alt=""/>
             <div class="discount">
                 <h6>Travel.com</h6>
                 <h3>Save up to 70%</h3>
